Adding feature to create new picture using HTML form

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,2 +1,2 @@
-<p><%= @picture[:title] %>, <%= @pictures[:artist] %></p>
+<p><%= @picture[:title] %>, <%= @picture[:artist] %></p>
 <img src="<%= @picture[:url] %>">
